--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet" />
 
     <!-- kakaotalk api -->
-    <script type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=176e3de05f19f6422f4820a14046b9a2&libraries=services"></script>
+    <!-- <script type="text/javascript"
+        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=176e3de05f19f6422f4820a14046b9a2&libraries=services"></script> -->
 </head>
 
 <body>
